@@ -3,6 +3,8 @@ CHANGES-1.4.txt
 
 CHANGES IN CUPS V1.4.4
 
+	- The scheduler didn't send events when a printer started accepting or
+	  rejecting jobs (STR #3480)
 	- The web interface now includes additional CSRF protection (STR #3498)
 
 
